--- a/craigslist/app/views/articles/new.html.erb
+++ b/craigslist/app/views/articles/new.html.erb
@@ -1,28 +1,2 @@
-<%= form_for [@category, @article] do |f| %>
-<% if @article.errors.any? %>
-  <div id="error_explanation">
-    <h2>
-      <%= pluralize(@article.errors.count, "error") %> prohibited
-      this article from being saved:
-    </h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<p>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-</p>
-<p>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-</p>
-
-<p>
-  <%= f.submit %>
-</p>
-<% end %>
+<h1>Create a new article</h1>
+<%= render 'form' %>
