--- a/craigslist/app/views/articles/_form.html.erb
+++ b/craigslist/app/views/articles/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for [@category, @article], remote: true, id: 'new_article_form' do |f| %>
+
+<%= form_for [@category, @article], remote: true do |f| %>
 <% if @article.errors.any? %>
   <div id="error_explanation">
     <h2>
