--- a/craigslist/app/views/categories/show.html.erb
+++ b/craigslist/app/views/categories/show.html.erb
@@ -1,10 +1,9 @@
 <h1>Articles</h1>
 
-<% @articles.each do |article| %>
-<li>
-  <%= link_to article.title, category_article_path(@category, article) %>
-
-</li>
-<% end %>
+<ul class="article_container">
+  <% @articles.each do |article| %>
+    <%= render partial: 'articles/show', locals: { article: article } %>
+  <% end %>
+</ul>
 
 <%= link_to 'Add an Article', new_category_article_path(@category), remote: true, id: 'show_form_link'%>
